<resources>
    <string name="app_name">GikHub</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="home">홈</string>
    <string name="buy">같이사요</string>
    <string name="eat">같이먹어요</string>
    <string name="talk">토크토크</string>
    <string name="mypage">마이페이지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>