<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="143dp"
        android:text="@string/app_name"
        android:textSize="30dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toEndOf="@+id/logo_img"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="90dp"
        android:layout_height="63dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="172dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gikhub_logo" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/login_msg"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/login"
            android:textSize="17dp"
            android:textColor="@color/black"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/email_btn"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="viewStart">

            <EditText
                android:id="@+id/email"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input_info_button"
                android:hint="이메일"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/passwd_btn"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginBottom="30dp">
            <EditText
                android:id="@+id/passwd"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_info_button"
                android:hint="비밀번호" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:textColor="@color/white"
            android:background="@drawable/button_round_login"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signup_msg1"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:text="계정이 없으신가요?"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signup_msg2"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/blue"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/signup" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>